--- a/front-end/secao-1-introducao-ao-frontend-e-javaScript-asssincrono/dia-1-ambiente-de-desenvolvimento/gerador-de-senhas/package.json
+++ b/front-end/secao-1-introducao-ao-frontend-e-javaScript-asssincrono/dia-1-ambiente-de-desenvolvimento/gerador-de-senhas/package.json
@@ -4,8 +4,22 @@
   "description": "Melhor gerador de senhas do mundo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite --open",
+    "lint": "npx eslint ./src"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nanoid": "^4.0.0",
+    "vite": "^3.2.3"
+  },
+  "type": "module",
+  "devDependencies": {
+    "eslint": "^8.27.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.0",
+    "eslint-plugin-promise": "^6.1.1"
+  }
 }
